--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -69,7 +69,7 @@
 
             <div class="sensor-averages">
                 <% averageData.forEach(sensor=> { %>
-                    <div class="average-card">
+                    <div class="stats-card">
                         <div class="icon">
                             <% if (sensor.type==='CO2' ) { %>
                                 <i class="fas fa-cloud"></i>
