--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1207,7 +1207,7 @@ button:active {
 .stats-card p {
     font-size: 1.5rem;
     font-weight: bold;
-    color: #4a6cf7;
+    color: #000000;
     margin: 0;
 }
 
