--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
             <li><a href="/"><i class="fas fa-home"></i> Home</a></li>
             <li><a href="/features"><i class="fas fa-cogs"></i> Features</a></li>
             <li><a href="/dashboard" class="active"><i class="fas fa-chart-pie"></i> Dashboard</a></li>
-            <li><a href="/chat"><i class="fas fa-comments"></i> Chat with ChatGPT</a></li>
+            <li><a href="/chat"><i class="fas fa-comments"></i> Chatbot Assistant</a></li>
             <li><a href="/notifications"><i class="fas fa-bell"></i> Notifications</a></li>
             <li><a href="/rooms-data"><i class="fas fa-database"></i> Rooms Data</a></li>
             <li><a href="/login"><i class="fas fa-user"></i> Login</a></li>
